trunk/Archive2/fa/9d595f155947d5/output
main.cpp: In function 'main':
main.cpp:11:5: error: ISO C90 forbids mixed declarations and code [-Wpedantic]
     int n = 1;
     ^
main.cpp:11:9: warning: unused variable 'n' [-Wunused-variable]
     int n = 1;
         ^
main.cpp:12:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
